--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1 id="ticket_price">ciao</h1>
+
     <script src="./assets/script/main.js"></script>
 </body>
 </html>
